--- a/ui/article-1.html
+++ b/ui/article-1.html
@@ -1,2 +1,30 @@
 <html>
+    <head>
+        <title>
+            article-1
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">home</a>
+        </div>
+        <hr/>
+        <h3>
+            article1
+        </h3>
+        <div>
+            february 15 2018
+        </div>
+        <div>
+            <p>
+                this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.
+            </p>
+            <p>
+                this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.
+            </p>
+            <p>
+                this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.
+            </p>
+        </div>
+    </body>
 </html>
