[imad-console] Updates ui/article-1.html

--- a/ui/article-1.html
+++ b/ui/article-1.html
@@ -3,6 +3,7 @@
         <title>
             article-1
         </title>
+        <meta name="viewport" contents="width=device-width, initial-scalable=1" />
     </head>
     <body>
         <div>
