--- a/ui/article3.html
+++ b/ui/article3.html
@@ -1,2 +1,31 @@
 <html>
+     <head>
+        <title>
+            article-3
+        </title>
+        <meta name="viewport" contents="width=device-width, initial-scalable=1" />
+    </head>
+    <body>
+        <div>
+            <a href="/">home</a>
+        </div>
+        <hr/>
+        <h3>
+            article3
+        </h3>
+        <div>
+            Manjunath
+        </div>
+        <div>
+            <p>
+                this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.
+            </p>
+            <p>
+                this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.
+            </p>
+            <p>
+                this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.
+            </p>
+        </div>
+    </body>
 </html>
