--- a/ui/article-1.html
+++ b/ui/article-1.html
@@ -5,9 +5,12 @@
         </title>
         <style>
             .container{
-                max-width: 800px;
-                margin: 0 auto;
-                color:grey;
+               max-width: 800px;
+               margin: 0 auto;
+               color: #6d5f5f;
+               padding-top: 60px;
+               padding-left: 20px;
+               padding-right: 20px;
             }
         </style>
         <meta name="viewport" contents="width=device-width, initial-scalable=1" />
