[imad-console] Updates ui/article-2.html

--- a/ui/article-2.html
+++ b/ui/article-2.html
@@ -3,9 +3,20 @@
         <title>
             article-2
         </title>
+        <style>
+            .container{
+               max-width: 800px;
+               margin: 0 auto;
+               color: #6d5f5f;
+               padding-top: 60px;
+               padding-left: 20px;
+               padding-right: 20px;
+            }
+        </style>
         <meta name="viewport" contents="width=device-width, initial-scalable=1" />
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">home</a>
         </div>
@@ -26,6 +37,7 @@
             <p>
                 this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.this is the paragraph for my first article.
             </p>
+        </div>
         </div>
     </body>
 </html>
