--- a/ui/article-2.html
+++ b/ui/article-2.html
@@ -3,16 +3,7 @@
         <title>
             article-2
         </title>
-        <style>
-            .container{
-               max-width: 800px;
-               margin: 0 auto;
-               color: #6d5f5f;
-               padding-top: 60px;
-               padding-left: 20px;
-               padding-right: 20px;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
         <meta name="viewport" contents="width=device-width, initial-scalable=1" />
     </head>
     <body>
